    (Closes: #458752)
  * debian/rules: Run make bigcheck instead of check, to run the numeric_big
    test, too.
  * debian/rules: Add target 'contrib-check' for running the tests in contrib.
    Do not call it by default for now, still needs some work.
  * debian/rules: Add target 'contrib-installcheck' for running the tests in
    contrib, using the installed programs in the system.

 -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 19:26:43 +0100

postgresql-8.3 (8.3~beta4-1) experimental; urgency=low

  * Fourth beta release of PostgreSQL 8.3.

 -- Martin Pitt <mpitt@debian.org>  Mon, 03 Dec 2007 08:35:34 +0100

postgresql-8.3 (8.3~beta3-2) experimental; urgency=low

  * debian/control: Drop libgssapi-dev build dependency, current krb does not
    need it any more. (Closes: #452549)

 -- Martin Pitt <mpitt@debian.org>  Fri, 23 Nov 2007 17:26:12 +0100

postgresql-8.3 (8.3~beta3-1) experimental; urgency=low

  * Third beta release of PostgreSQL 8.3.
  * debian/rules:
    - Ignore test suite failure on alpha for now, since it behaves weird on
      some floating point operations (regression in glibc and gcc-4.2). Bug is
      under investigation. Fixes FTBFS for now. (see #449002)
    - Remove test suite ignoring for mips and mipsel again, seems the buildds
      finally got a fixed kernel.
  * Add debian/patches/12-psql-sensible-editor.patch: Use sensible-editor
    instead of vi as editor fallback in psql if $EDITOR and friends are not
    defined. (Closes: #451553)
  * Enable OSSP UUID support, add build dependency libossp-uuid-dev.
    (Closes: #451336)
  * Install some missing .so libraries.
  * debian/rules: Check that all files in debian/tmp get installed to
    somewhere, and fail the build if not.

 -- Martin Pitt <mpitt@debian.org>  Wed, 21 Nov 2007 20:18:44 +0100

postgresql-8.3 (8.3~beta2-1) experimental; urgency=low

  * Second beta release of PostgreSQL 8.3.
  * Remove patches which are upstream now: