@@ -1,5 +1,6 @@
 #!/usr/bin/make	-f 
 TCL_VER := 8.4
+MAJOR_VER := 8.3
 DEB_TAR_SRCDIR:=postgresql-8.3RC1
 
 include /usr/share/cdbs/1/rules/tarball.mk
@@ -20,10 +21,10 @@ endif
 TESTSUITE_FAIL_CMD=exit 1
 
 DEB_DH_INSTALL_SOURCEDIR=debian/tmp
-DEB_CONFIGURE_EXTRA_FLAGS := --mandir=\$${prefix}/share/postgresql/8.3/man \
-  --with-docdir=\$${prefix}/share/doc/postgresql-doc-8.3 \
-  --datadir=\$${prefix}/share/postgresql/8.3 \
-  --bindir=\$${prefix}/lib/postgresql/8.3/bin \
+DEB_CONFIGURE_EXTRA_FLAGS := --mandir=\$${prefix}/share/postgresql/$(MAJOR_VER)/man \
+  --with-docdir=\$${prefix}/share/doc/postgresql-doc-$(MAJOR_VER) \
+  --datadir=\$${prefix}/share/postgresql/$(MAJOR_VER) \
+  --bindir=\$${prefix}/lib/postgresql/$(MAJOR_VER)/bin \
   --includedir=\$${prefix}/include/postgresql/ \
   --enable-nls \
   --enable-integer-datetimes \
@@ -51,7 +52,7 @@ DEB_CONFIGURE_EXTRA_FLAGS := --mandir=\$${prefix}/share/postgresql/8.3/man \
   CFLAGS='$(CFLAGS)' \
   LDFLAGS='$(LDFLAGS)'
 
-DEB_DH_MAKESHLIBS_ARGS := -Xusr/lib/postgresql/8.3
+DEB_DH_MAKESHLIBS_ARGS := -Xusr/lib/postgresql/$(MAJOR_VER)
 DEB_DH_INSTALLCHANGELOGS_ARGS := build-tree/postgresql-*/HISTORY
 DEB_COMPRESS_EXCLUDE := .source .c
 DEB_DH_INSTALLINIT_ARGS := -u'defaults 19'
@@ -74,10 +75,10 @@ common-post-build-indep::
 	# build tutorial stuff
 	make -C build-tree/$(DEB_TAR_SRCDIR)/src/tutorial NO_PGXS=1
 
-install/postgresql-doc-8.3::
+install/postgresql-doc-$(MAJOR_VER)::
 	install build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/*.c build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/*.source build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/Makefile build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/README debian/$(cdbs_curpkg)/usr/share/doc/$(cdbs_curpkg)/tutorial
 
-binary-predeb/postgresql-8.3::
+binary-predeb/postgresql-$(MAJOR_VER)::
 ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	# patch away the "don't execute as root" check for the test
 	# suite; doing it here will ensure that the actual debs have
@@ -98,14 +99,14 @@ ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 endif
 
 	# compress manpages
-	find debian/postgresql-8.3/usr/share/postgresql/8.3/man -type f -exec gzip -9 '{}' \;
+	find debian/postgresql-$(MAJOR_VER)/usr/share/postgresql/$(MAJOR_VER)/man -type f -exec gzip -9 '{}' \;
 
-binary-predeb/postgresql-client-8.3::
-	find debian/postgresql-client-8.3/usr/share/postgresql/8.3/man -type f -exec gzip -9 '{}' \;
+binary-predeb/postgresql-client-$(MAJOR_VER)::
+	find debian/postgresql-client-$(MAJOR_VER)/usr/share/postgresql/$(MAJOR_VER)/man -type f -exec gzip -9 '{}' \;
 
-binary-install/postgresql-plpython-8.3::
+binary-install/postgresql-plpython-$(MAJOR_VER)::
 	dh_pycentral -p$(cdbs_curpkg)
-	dh_python -p$(cdbs_curpkg) usr/lib/postgresql/8.3/lib
+	dh_python -p$(cdbs_curpkg) usr/lib/postgresql/$(MAJOR_VER)/lib
 
 # run tests in contrib in temporary test installations, using programs
 # from build-tree
@@ -126,14 +127,14 @@ contrib-installcheck:
 	# set up temporary db
 	rm -rf build-tree/tmp_data
 	mkdir build-tree/tmp_data
-	/usr/lib/postgresql/8.3/bin/initdb -D build-tree/tmp_data
-	/usr/lib/postgresql/8.3/bin/pg_ctl -D build-tree/tmp_data -l build-tree/tmp_data/postgres.log -o '-k /tmp' start
+	/usr/lib/postgresql/$(MAJOR_VER)/bin/initdb -D build-tree/tmp_data
+	/usr/lib/postgresql/$(MAJOR_VER)/bin/pg_ctl -D build-tree/tmp_data -l build-tree/tmp_data/postgres.log -o '-k /tmp' start
 	# wait until it started up
-	while !/usr/lib/postgresql/8.3/bin/psql -h /tmp -l >/dev/null 2>&1; do sleep 1; done
+	while !/usr/lib/postgresql/$(MAJOR_VER)/bin/psql -h /tmp -l >/dev/null 2>&1; do sleep 1; done
 	sleep 1
-	while !/usr/lib/postgresql/8.3/bin/psql -h /tmp -l >/dev/null 2>&1; do sleep 1; done
+	while !/usr/lib/postgresql/$(MAJOR_VER)/bin/psql -h /tmp -l >/dev/null 2>&1; do sleep 1; done
 	# run the tests
 	-cd build-tree/$(DEB_TAR_SRCDIR)/contrib; make installcheck
-	/usr/lib/postgresql/8.3/bin/pg_ctl -D build-tree/tmp_data stop
+	/usr/lib/postgresql/$(MAJOR_VER)/bin/pg_ctl -D build-tree/tmp_data stop
 	# find and print the regression diffs
 	find build-tree/$(DEB_TAR_SRCDIR)/contrib/ -name regression.diffs -exec cat '{}' \;
