@@ -33,8 +33,9 @@ postgresql-8.3 (8.3~rc1-1) UNRELEASED; urgency=low
     Do not call it by default for now, still needs some work.
   * debian/rules: Add target 'contrib-installcheck' for running the tests in
     contrib, using the installed programs in the system.
+  * debian/rules: Replace hardcoded '8.3' strings with $(MAJOR_VER) variable.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 19:26:43 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sat, 05 Jan 2008 19:19:46 +0100
 
 postgresql-8.3 (8.3~beta4-1) experimental; urgency=low
 
